<resources>
    <string name="app_name">Binary Hero</string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About App</string>
    <string name="tutorial_content">In binary you only count with 0s and 1s! \n\n

        We start at 0, and then next is 1 however there is no 2.  Instead we
        now count to 10.  \n\n

        The far right number stands for 1, the number to the left of that stands for 2, then 4 (2^2), then 8 (2^3), 16 (2^4), 32(2^5) and so on.  \n\n

        So counting to 6 would look like 0, 1, 10, 11, 100, 101, 110.  \n\n

        5 is 101 because the left most 1 represents a 4 (2^2), the 2s place is empty, and then the ones place has a 1(2^0) so
        you add 1 + 4 to get 5 or 2^0 + 2^2.  \n\n

        With 6 the 4s place and the 2s place are both occupied by 1s so we add 4 + 2 = 6 or 2^2 + 2^1.  </string>
    <string name="team_name">Augie Snackers</string>
    <string name="team_members">Scott Doberstein\nNelly Cheboi\nAlex Jelinek\nChristopher Green\nKaylee Nolan</string>
    <string name="graphics_credit">Graphics: Alex Jelinek, Kaylee Nolan</string>
    <string name="music_credit">Music: Christopher Green</string>
    <string name="sound_credit">All sound effects downloaded from soundjay.com</string>
    <string name="congratulations_message">Level complete! The password for this level is</string>
</resources>
